@@ -3228,49 +3228,6 @@ int create_aura(object *op, object *caster, object *spell)
     return 1;
 }
 
-
-/**
- * Moves the peacemaker spell.
- * @param op
- * piece object.
- */
-void move_peacemaker(object *op) {
-    object *tmp;
-
-    for(tmp=get_map_ob(op->map,op->x,op->y);tmp!=NULL;tmp=tmp->above) {
-	int atk_lev, def_lev;
-	object *victim=tmp;
-
-	if (tmp->head) victim=tmp->head;
-	if (!QUERY_FLAG(victim,FLAG_MONSTER)) continue;
-	if (QUERY_FLAG(victim,FLAG_UNAGGRESSIVE)) continue;
-	if (victim->stats.exp == 0) continue;
-
-	def_lev = MAX(1,victim->level);
-	atk_lev = MAX(1,op->level);
-
-	if (rndm(0, atk_lev-1) > def_lev) {
-	    /* make this sucker peaceful. */
-
-	    change_exp(get_owner(op),victim->stats.exp, op->skill, 0);
-	    victim->stats.exp=0;
-	    victim->attack_movement = RANDO2;
-	    SET_FLAG(victim,FLAG_UNAGGRESSIVE);
-	    SET_FLAG(victim,FLAG_RUN_AWAY);
-	    SET_FLAG(victim,FLAG_RANDOM_MOVE);
-	    CLEAR_FLAG(victim,FLAG_MONSTER);
-	    if(victim->name) {
-		draw_ext_info_format(NDI_UNIQUE,0,op->owner,
-				     MSG_TYPE_SPELL, MSG_TYPE_SPELL_SUCCESS,
-				     "%s no longer feels like fighting.",
-				     "%s no longer feels like fighting.",
-				     victim->name);
-	    }
-	}
-    }
-}
-
-
 /**
  * This writes a rune that contains the appropriate message.
  * There really isn't any adjustments we make.
