@@ -20,6 +20,7 @@ hole/hole.c \
 identify_altar/identify_altar.c \
 lamp/lamp.c \
 lighter/lighter.c \
+peacemaker/peacemaker.c \
 pedestal/pedestal.c \
 player_mover/player_mover.c \
 poison/poison.c \
