@@ -8,6 +8,13 @@ level ChangeLog file.
 should be inlcluded here. Other changes should simply be in the top level
 ChangeLog.
 
+Ob types   : PEACEMAKER
+Events     : process
+Moved from : ../server/spell_effect.c, legacy/process.c
+Moved to   : peacemaker/peacemaker.c
+Comment    : Moved process code for PEACEMAKER.
+2007-11-25 - Alex Schultz
+--
 Ob types   : GATE, TIMED_GATE
 Events     : process
 Moved from : ../server/time.c, legacy/process.c
