@@ -15,6 +15,16 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Refactor peacemaker code.
+    server/ob_types.c
+    server/spell_effect.c
+    include/sproto.h
+    include/typesproto.h
+    types/peacemaker/peacemaker.c
+    types/legacy/process.c
+    types/Makefile.am
+Alex Schultz 2007-11-25
+
 Refactor gate code.
     server/time.c
     server/ob_types.c
